<resources>
    <string name="app_name">HMS</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_search">Search</string>
    <string name="action_location_found">Found</string>
    <string name="action_refresh">Sync</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Update</string>
    <string name="search_result">Search Result</string>
    <string name="search_hint">Enter name or phone #</string>
    <string name="action_add_person">Add Patient</string>
    <string name="action_home">Home</string>
    <string name="tab1_title">Demeograpy</string>
    <string name="tab2_title">Current</string>
    <string name="tab3_title">History</string>

</resources>
