<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto">
    <!-- Search / will display always -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:hint="@string/action_search"
        appcompat:actionViewClass="android.support.v7.widget.SearchView"
        appcompat:showAsAction="always"/>

    <!-- Location Found -->
    <!--item android:id="@+id/action_location_found"
        android:icon="@drawable/ic_action_location_found"
        android:title="@string/action_location_found"
        app:showAsAction="always" /-->
    <!-- Add Person -->
    <item android:id="@+id/action_add_person"
        android:icon="@drawable/ic_action_add_person"
        android:title="@string/action_add_person"
        app:showAsAction="always" />
    <item android:id="@+id/action_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/action_home"
        app:showAsAction="always" />

    <!-- Refresh -->
        <item android:id="@+id/action_refresh"
            android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />
    <!-- Help -->
    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/action_help"
        app:showAsAction="ifRoom"/>

    <!-- Check updates -->
    <item android:id="@+id/action_check_updates"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_check_updates"
        app:showAsAction="ifRoom" />
</menu>